# vim: set noexpandtab:

2012-09-26 Steve
	* Fix isAF2 calib flag for electrons

2012-09-25 Matt
	* Saving truth flag from LeptonTruthTools

2012-09-20 Steve
	* Configure METUtility for STVF
	* Tagging SusyCommon-00-00-39

2012-09-19 Steve
	* Added flags to SusyD3PDAna: m_d3pdTag, m_metFlavor, m_isAF2
	* Added command line options to NtMaker: --d3pd1032, --metFlav, --af2
	* Filling passMllForAlpgen flag using MultiLep/TruthTools
	* Filling ptcone30ElStyle
	* Turned on jet calibration in SUSYTools
	* Tagging SusyCommon-00-00-38

2012-09-18 Steve
	* Added RecoTruthMatch tool, filling isChargeFlip flag
		* Not yet using the reclassification, because at the 
		  moment all it does is classify by type and origin...?

2012-09-17 Steve
	* Updated pileup file for A-E1
	* Added include of SusyGridCrossSectionTools.h for compiling
	* Tagging SusyCommon-00-00-37

2012-09-14 Matt
	* Added fill method for susyFinalState for the event class.
	* Added way to check sample name for saving susyFinalState

2012-09-12 Matt
	* Print statement not commented in buildMet.  Commented out now.

2012-09-12 Matt
	* Added pdf sys variables to the event class
	* Tagging SusyCommon-00-00-36

2012-09-11 Steve
	* Now using get_electrons_met to get electrons for the MET
	* Only match truth jets on MC

2012-09-08 Steve
	* Now updated to SUSYTools-00-01-06
	* Fixed the GRL in NtMaker
	* Replace RESOST up/down terms with single term, to reflect change in SUSYTools
	* Tagging SusyCommon-00-00-35

2012-09-06 Steve
	* Added the TTC incomplete event veto to the SusyNtMaker cutflow

2012-09-04 Matt
	* Fixed muon eff error

2012-09-03 Matt
	* Added Met Systematics

2012-09-03 Steve
	* Fixed initialization of SUSYObjDef, setting paths to muon SF and smearing files

2012-09-02 Matt
	* passLArHoleVeto() was reseting jet tlv causing issue with sys scale factor. 
	  commented out this function as it is no longer used anyway. 
	* Updated to SusyTools-00-01-05 